--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ body {
   font-size: 15px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   body {
     font-size: 10px;
   }
